# gridlock-astram-digital-twin

./: .env.example  .gitignore  CHANGELOG.md  README.md  TASK.md  main.py  pyproject.toml  requirements.txt
app/: app.py  components.py  feature_engineering.py  heuristics.py  holidays.py  traffic.py  weather.py
data/: augmented_astram_events.csv  cleaned_astram_events.csv  enriched_astram_events.csv
models/: category_mappings.json  closure_model.json  closure_model_cb.cbm  duration_model.json  duration_model_cb.cbm  label_encoders.pkl
notebooks/: 01_eda_and_cleaning.ipynb  02_model_training.ipynb  02_model_training.py  02_xgboost_model_training.ipynb  03_catboost_model_training.ipynb  03_catboost_model_training.py  03_osm_enrichment_optional.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: inference.py
