[project]
name = "gridlock-2-0-round-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pydeck>=0.9.2",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shap>=0.52.0",
    "shapely>=2.1.2",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.27.2",
    "xgboost>=3.2.0",
    "python-dotenv>=1.0.0",
]
